# guildmanager

./: project.godot
Assets/Images/: Game UI Interface Pack - Medieval Fantasy Edition - Source 01.png.import  Game UI Interface Pack - Medieval Fantasy Edition - Source 02.png.import  Game UI Interface Pack - Medieval Fantasy Edition - Source 03.png.import  Game UI Interface Pack - Medieval Fantasy Edition - Source 04.png.import  Game UI Interface Pack - Medieval Fantasy Edition - Source 05.png.import  avatar-placeholder.png.import  coin.png.import  envelope.png.import  mouse_cursor.png.import  patchfx_DAP_rev1_trnsprnt.png.import  scroll.png.import
Assets/Themes/: button_active.tres  button_disabled.tres  button_normal.tres  header_font.tres  itemlist_background.tres  main_theme.tres  texture_button_recruit.tres
Native/: GameState.gdns  squire.gdnlib
Resources/: GameData.gd  quests.json
Scenes/: BottomBar.tscn  Continue.tscn  CreateParty.tscn  Dashboard.tscn  Equipment.tscn  EquipmentPopup.tscn  EquipmentSlot.tscn  Hire.gd  Hire.tscn  Main.gd  Main.tscn  Market.tscn  PartyGridItem.tscn  Quest.tscn  QuestPopup.tscn  Shop.tscn  TopBar.tscn
Scripts/: BottomBar.gd  Combat.gd  Continue.gd  CreateParty.gd  Dashboard.gd  Dice.gd  GameMenu.gd  GenerateWorld.gd  Hire.gd  Main.gd  NameGenerator.gd  PartyGridItem.gd  PersonalityTraits.gd  Quest.gd  QuestPopup.gd  SaveLoad.gd  TopBar.gd
squire/: Cargo.toml
squire/src/: lib.rs
squire/src/components/: character.rs  guild.rs  mod.rs  player.rs  quests.rs  week.rs
squire/src/utilities/: dice.rs  mod.rs
(+17 files in other folders)
