[package]
name = "squire"
version = "0.1.0"
authors = ["Richard Patching <richard@justaddpixels.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdnative = "0.9.1"
rand = "0.8"
specs = "0.16.1"
specs-derive = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["cdylib"]
